# rules_fuzzing

./: .bazelrc  .bazelversion  .gitignore  BUILD  CODEOWNERS  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  dependency_import.bzl  dummy_test.cc  fuzz_test.bzl  hello-world.cc  hello_world.cc  honggfuzz.BUILD  repositories.bzl  update_docs.sh
.bcr/: metadata.template.json  presubmit.yml
.github/: PULL_REQUEST_TEMPLATE.md  bazel_test.yml  renovate.json
.github/workflows/: bazel_lint.yml  bazel_test.yml  code_review.yaml  cpp_lint.yml  cpplint.yml  oss_fuzz.yml
docs/: BUILD  cc-fuzzing-rules.md  cc_deps.md  common.md  guide.md  java-fuzzing-rules.md
examples/: BUILD  buffer_overflow_fuzz_test.cc  dummy_fuzz_test.cc  empty_fuzz_test.cc  fuzzed_data_provider_fuzz_test.cc  hang_fuzz_test.cc  input_buffer_overflow_fuzz_test.cc  msan_fuzz_test.cc  new_buffer_overflow_fuzz_test.cc  oom_fuzz_test.cc  re2_fuzz_test.cc  runfiles_fuzz_test.cc
examples/bzlmod/: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel
examples/dictionaries/: valid_part1.dict  valid_part2.dict
examples/java/: BUILD
examples/test_corpus_dir/: corpus_readme
fuzzing/: BUILD  cc_defs.bzl  cc_deps.bzl  common.bzl  dependency_imports.bzl  init.bzl  instrum_opts.bzl  java_defs.bzl  repositories.bzl  requirements.txt
fuzzing/engines/: BUILD  centipede_launcher.sh  honggfuzz_launcher.sh  jazzer_launcher.sh  libfuzzer.sh  libfuzzer_launcher.sh  libfuzzer_stub.cc  replay_launcher.sh
fuzzing/private/: BUILD  binary.bzl  common.bzl  engine.bzl  engine_test.bzl  extensions.bzl  fuzz_test.bzl  instrum_opts.bzl  instrument.bzl  java_utils.bzl  regression.bzl  util.bzl
fuzzing/private/oss_fuzz/: BUILD.tpl  instrum.bzl.tpl  package.bzl  repository.bzl
fuzzing/replay/: BUILD  file_util.cc  file_util.h  file_util_test.cc  replay_main.cc  status_util.cc  status_util.h  status_util_test.cc  test_file_buffer.cc  test_file_buffer.h  test_file_buffer_test.cc  test_replayer.cc  test_replayer.h
fuzzing/tools/: BUILD  copy_corpus.py  dict_validate_lib.py  dict_validate_lib_test.py  dict_validation.py  dict_validation_test.py  dict_validator.py  dict_validator_test.py  dict_validator_unit_test.py  launcher.py  make_corpus_dir.py  realpath.py  validate_dict.py
(+14 files in other folders)
