load("@rules_fuzzing//fuzzing:cc_defs.bzl", "cc_fuzz_test")
load("@rules_fuzzing//fuzzing:java_defs.bzl", "java_fuzz_test")

cc_fuzz_test(
    name = "cc_fuzz_test",
    srcs = ["cc_fuzz_test.cc"],
)

java_fuzz_test(
    name = "java_fuzz_test",
    srcs = ["JavaFuzzTest.java"],
    target_class = "com.example.JavaFuzzTest",
)
